# shutdown-restore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: logger.cpp  logger.h  main.cpp  restore_point.cpp  restore_point.h  service.cpp  service.h
